--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ keywords = ["debate", "statistics"]
 categories = ["mathematics"]
 
 [dependencies]
+reqwest = { version = "0.11.3", features = ["blocking"] }
+url = "2.2.2"
 
 [dev-dependencies]
 version-sync = "0.9.2"
