--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ keywords = ["debate", "statistics"]
 categories = ["mathematics"]
 
 [dependencies]
+quick-xml = { version = "0.22.0", features = ["serialize"] }
 reqwest = { version = "0.11.3", features = ["blocking"] }
+serde = { version = "1.0.126", features = ["derive"] }
 url = "2.2.2"
 
 [dev-dependencies]
